Added new files

--- a/angular.json
+++ b/angular.json
@@ -80,6 +80,10 @@
                 "input": "public"
               }
             ],
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
             "styles": [
               "src/styles.scss"
             ]
